dapr-distributed-calendar/fluent/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-aws-ingress
  namespace: observability
spec:
  ingressClassName: nginx-class
  rules:
    - host: kibana.mtheuermann.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-kibana
              port:
                number: 5601
